# ai-agent

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: .env.example  .env.prod.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agent_kernel/: __init__.py
backend/app/agent_kernel/contracts/: __init__.py  agent.py  artifact.py  event.py  memory.py  message.py  model.py  result.py  task.py  tool.py
backend/app/agent_kernel/events/: __init__.py  bus.py  publisher.py  subscribers.py
backend/app/agent_kernel/guardrails/: __init__.py  contracts.py  pii.py  pipeline.py  prompt_injection.py  safety.py
backend/app/agent_kernel/policies/: __init__.py  budget_policy.py  knowledge_policy.py  memory_policy.py  safety_policy.py  tool_policy.py
backend/app/agent_kernel/registry/: __init__.py  loader.py  manifest.py  validator.py
backend/app/agent_kernel/runtime/: __init__.py  cancellation.py  chat_model.py  checkpoints.py  compiler.py  context.py  runner.py  streaming.py
backend/app/agent_kernel/testing/: __init__.py  contract_test.py  fake_model.py  fake_tools.py
backend/app/agents/: __init__.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/modules/: __init__.py
backend/app/workflows/: __init__.py
backend/knowledge/love_master/: README.md
backend/tests/: test_app_bootstrap.py  test_chat_model.py  test_config.py  test_conversations_api.py  test_guardrails.py  test_knowledge_api.py  test_knowledge_service.py  test_love_master_agent.py
frontend/: .env.example  (+6 more)
(+157 files in other folders)
