[project]
name = "ai-agent-backend"
version = "0.1.0"
description = "AI 多智能体平台后端服务"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "redis>=7.0.0",
    "celery>=5.5.0",
    "langchain>=1.1.0",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.0",
    "langchain-mcp-adapters>=0.1.0",
    "qdrant-client>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
